# gs-control-2024-2025

./: .gitignore  .gitmodules  .readthedocs.yaml  Backend.cpp  Backend.h  CMakeLists.txt  Constants.h  DataLogger.cpp  DataLogger.h  HPRC_TEST.proto  README.md  RadioModule.cpp  RadioModule.h  SerialPort.cpp  SerialPort.h  SerialPortList.cpp  SerialPortList.h  Utility.h  WebServer.cpp  WebServer.h  main.cpp  populate_qrc.py  shell.nix
Backend/: Backend.cpp  Backend.h  RadioModule.cpp  RadioModule.h
Frontend/Widgets/: GraphWidget.cpp  GraphWidget.h  NavBall.cpp  NavBall.h  SerialPortList.cpp  SerialPortList.h
Frontend/Widgets/DataSimulationButton/: DataSimulationButton.cpp  DataSimulationButton.h
Frontend/Widgets/IndicatorWidget/IndicatorWidget/: QLedLabel.cpp  QLedLabel.h  ledwidget.cpp  ledwidget.h  ledwidget.ui
Frontend/Widgets/IndicatorWidget/PayloadIndicator/: PayloadConnectionIndicator.cpp  PayloadConnectionIndicator.h
Frontend/Widgets/IndicatorWidget/RocketIndicator/: RocketConnectionIndicator.cpp  RocketConnectionIndicator.h
Frontend/Widgets/RadioPerformanceWidgets/: bytespersecwidget.cpp  bytespersecwidget.h  bytespersecwidget.ui  droppedpacketswidget.cpp  droppedpacketswidget.h  droppedpacketswidget.ui  packetspersecwidget.cpp  packetspersecwidget.h  packetspersecwidget.ui  rssiwidget.cpp  rssiwidget.h  rssiwidget.ui  throughputdisplaywidget.cpp  throughputdisplaywidget.h  throughputdisplaywidget.ui
Frontend/Widgets/TimeDateWidget/: TimeDateWidget.cpp  TimeDateWidget.h
Frontend/Widgets/TimeDateWidgets/: datewidget.cpp  datewidget.h  datewidget.ui  flighttimewidget.cpp  flighttimewidget.h  flighttimewidget.ui  groundflighttimewidget.cpp  groundflighttimewidget.h  groundflighttimewidget.ui  groundtimewidget.cpp  groundtimewidget.h  groundtimewidget.ui  payloaduptimewidget.cpp  payloaduptimewidget.h  payloaduptimewidget.ui  rocketflighttimewidget.cpp  rocketflighttimewidget.h  rocketflighttimewidget.ui  rocketuptimewidget.cpp  rocketuptimewidget.h  rocketuptimewidget.ui
Frontend/Widgets/Viewer3D/: Viewer3D.cpp  Viewer3D.h
Frontend/Windows/GraphWindow/: GraphWindow.cpp  GraphWindow.h  GraphWindow.ui
Frontend/Windows/GraphicsWindow/: graphicswindow.cpp  graphicswindow.h  graphicswindow.ui
Frontend/Windows/InfoWindow/: timetestwindow.cpp  timetestwindow.h  timetestwindow.ui
Frontend/Windows/LogWindow/: logwindow.cpp  logwindow.h  logwindow.ui
Frontend/Windows/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Frontend/Windows/RadioControlsWindow/: RadioControlsWindow.cpp  RadioControlsWindow.h  RadioControlsWindow.ui
Frontend/Windows/RadioPerformanceWindow/: radioperformancewindow.cpp  radioperformancewindow.h  radioperformancewindow.ui
Frontend/Windows/TelemetryWindow/: raw_telemetry.cpp  raw_telemetry.h  raw_telemetry.ui
Resources/: Resources.qrc
Resources/Models/: HPRC_rocket.stl  LIFT_Rocket.stl  Starship.stl
Utility/: DataLogger.cpp  DataLogger.h  DataSimulator.cpp  DataSimulator.h  SerialPort.cpp  SerialPort.h  SerialPortManager.cpp  SerialPortManager.h  TelemetryHandler.cpp  TelemetryHandler.h  UnitConversions.h  Utility.h  WebServer.cpp  WebServer.h  json_struct.h
Utility/DataSimulator/: DataSimulator.cpp  DataSimulator.h
Utility/DataSimulator/SimulationData/: SamplePayloadData.csv  SampleRocketData.csv
docs/: backend.rst  conf.py  index.rst  requirements.txt
docs/source/: backend.rst  conf.py  frontend.rst  index.rst
